<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<ImageView
    android:id="@+id/iconAmonat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/amonat"
    android:background="@color/amonatColor"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent">
</ImageView>
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="@font/timesnewromanbold"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:background="@drawable/semi_oval"
        android:textColor="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconAmonat">
    </TextView>
    <TextView
        android:id="@+id/labelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textColor="@color/amonatColor"
        android:fontFamily="@font/timesnewroman"
        android:textSize="24sp"
        android:gravity="left"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp">
    </TextView>

    <EditText
        android:id="@+id/logEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="Логин"
        android:padding="15dp"
        android:textSize="24sp"
        android:textColor="@color/amonatColor"
        android:textColorHint="@color/amonatColor"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/labelText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="Пароль"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="24sp"
        android:textColor="@color/amonatColor"
        android:textColorHint="@color/amonatColor"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/logEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/inButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button"
        android:paddingStart="15dp"
        android:text="@string/inButton"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:textColor="#8A8A8A"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEditText">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/infoButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:background="@null"
        android:fontFamily="@font/timesnewroman"
        android:paddingStart="15dp"
        android:textSize="28sp"
        android:text="@string/infoButton"
        android:textColor="@color/amonatColor"
        android:gravity="right"
        android:paddingEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inButton">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>